# azure-nvidia-robotics-reference-architecture

./: .cspell-dictionary.txt  .cspell.json  .env.local.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements.txt  run-onnx-inference.sh  setup-dev.ps1  setup-dev.sh
.cspell/: azure-services.txt  general-technical.txt  industry-acronyms.txt  microsoft-sample-companies.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/beads/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 00-general.md  01-bug-report.yml  02-feature-request.yml  03-infrastructure-issue.yml  04-training-issue.yml  05-documentation.yml  config.yml
.github/agents/: dataviewer-developer.agent.md  osmo-training-manager.agent.md
.github/instructions/: commit-message.instructions.md  dataviewer.instructions.md  docs-style-and-conventions.instructions.md  shell-scripts.instructions.md
.github/prompts/: chatlog.prompt.md  start-dataviewer.prompt.md
.github/workflows/: codeql-analysis.yml  copyright-headers.yml  dataviewer-frontend-tests.yml  dependency-pinning-scan.yml  dependency-review.yml  frontmatter-validation.yml  gitleaks-scan.yml  link-lang-check.yml  main.yml  markdown-link-check.yml  markdown-lint.yml  msdate-freshness-check.yml  pester-tests.yml  pr-validation.yml  ps-script-analyzer.yml  pytest-tests.yml  python-lint.yml  release-please.yml  sha-staleness-check.yml  spell-check.yml  table-format.yml  validate-config-schema.yml  weekly-security-maintenance.yml  weekly-validation.yml  workflow-permissions-scan.yml  yaml-lint.yml
.husky/: pre-commit
config/: README.md  generate_config_schema.py  recording_config.schema.json
deploy/: GETTING-STARTED.md  README.md  export_policy.py
deploy/000-prerequisites/: README.md  az-sub-init.ps1  az-sub-init.sh  mek-generation.sh
deploy/001-iac/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/002-setup/: 01-deploy-robotics-charts.sh  02-deploy-azureml-extension.sh  02-deploy-osmo-control-plane.sh  02-install-azureml-extension.sh  03-deploy-osmo-backend.sh  03-deploy-osmo-control-plane.sh  04-configure-osmo-storage.sh  04-deploy-osmo-backend.sh  05-configure-osmo.sh  README.md  build-osmo-client-image.sh  configure-dataset-credential.sh  defaults.conf  install-azureml-extension.sh  update-service-url.sh
docs/: README.md  azureml-validation-job-debugging.md  gpu-configuration.md  lerobot-inference.md  mlflow-integration.md  openssf-scope.md  security-guide.md
docs/contributing/: README.md  ROADMAP.md  accessibility.md  architecture.md  contribution-workflow.md  cost-considerations.md  deployment-validation.md  documentation-maintenance.md  infrastructure-style.md  prerequisites.md  pull-request-process.md  security-review.md
docs/deploy/: README.md  automation.md  cleanup.md  cluster-setup-advanced.md  cluster-setup.md  dns.md  infrastructure-reference.md  infrastructure.md  prerequisites.md  vpn.md
docs/edge/: chunking-compression-config.md
docs/getting-started/: README.md  quickstart.md
docs/inference/: README.md  lerobot-inference.md  osmo-inference.md
docs/security/: README.md  security-guide.md  threat-model.md
docs/training/: README.md  azureml-training.md  experiment-tracking.md  isaac-lab-training.md  lerobot-training.md  mlflow-integration.md  osmo-training.md
docs/webapp/: BACKEND_IMPLEMENTATION_GUIDE.md  FRONTEND_IMPLEMENTATION_GUIDE.md  PRODUCT_REQUIREMENTS.md  README.md
scripts/: README.md  batch-lerobot-inference.py  generate_config_schema.py  plot-lerobot-trajectories.py  run-lerobot-pipeline.sh  run-local-lerobot-inference.py  run-local-lerobot-training.sh  run-onnx-inference.sh  submit-azureml-lerobot-inference.sh  submit-azureml-lerobot-training.sh  submit-azureml-training.sh  submit-azureml-validation.sh  submit-osmo-dataset-training.sh  submit-osmo-inference.sh  submit-osmo-lerobot-inference.sh  submit-osmo-lerobot-training.sh  submit-osmo-training.sh  submit-skrl-test.sh  test-lerobot-inference.py
scripts/lib/: Get-VerifiedDownload.ps1  terraform-outputs.ps1
scripts/linting/: Invoke-FrontmatterValidation.ps1  (+8 more)
src/inference/Ur10e/deploy/: OFFLINE_EVAL.md  README.md  deploy.yaml  pyproject.toml
src/inference/Ur10e/deploy/ur10e_act_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/inference/Ur10e/deploy/ur10e_deploy/: __init__.py  camera.py  config.py  dashboard.py  dataset_reader.py  main.py  offline_eval.py  policy_runner.py  replay.py  replay_dashboard.py  robot.py  rosbag_replay.py  safety.py  standalone_policy_runner.py  telemetry.py  test_camera.py  test_connection.py
src/inference/Ur10e/deploy/ur10e_deploy/static/: index.html  replay.html
src/inference/Ur10e/rosbag-to-lerobot/: .gitignore  README.md  batch_convert.py  batch_convert_all.py  config.yaml  download_and_convert.py  pyproject.toml  replay_json_trajectory.py  validate_dataset.py  verify_batch.py  verify_output.py
src/inference/Ur10e/rosbag-to-lerobot/rosbag_to_lerobot/: __init__.py  blob_storage.py  cli.py  config.py  conventions.py  converter.py  rosbag_reader.py  sync.py
src/inference/Ur10e/rosbag-to-lerobot/tests/: test_conventions.py  test_converter.py  test_sync.py
src/inference/Ur10e/train/: act_model.py  config.yaml  pyproject.toml  train.py
src/inference/Ur10e/train/osmo/: Dockerfile  Dockerfile.eval  README.md  configure-registry-pod.yaml  deploy-to-osmo.ps1  download-blob.sh  eval-entrypoint.sh  fix-containerd-node2.yaml  fix_containerd_registry.py  fix_hosts_toml.py  fix_local_pull.py  osmo-config-ddp.yaml  osmo-config.yaml  osmo-workflow-blob.yaml  osmo-workflow-ddp.yaml  osmo-workflow-sweep.yaml  osmo-workflow-train-eval.yaml  osmo-workflow-wandb.yaml  osmo-workflow.yaml  verify-registry-pod.yaml
tests/: conftest.py
workflows/: README.md
(+449 files in other folders)
