[project]
name = "azure-nvidia-robotics-reference-architecture"
version = "0.2.0"
description = "Azure NVIDIA Robotics Reference Architecture for Isaac Lab training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Dev tools
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipywidgets>=8.1.8",
    "tqdm>=4.67.1",
    # Core Isaac Lab dependencies
    "numpy<3",
    "onnx>=1.18.0",
    "prettytable==3.17.0",
    "toml",
    "hidapi==0.15.0",
    "gymnasium==1.2.3",
    "trimesh",
    "pyglet<3",
    "transformers",
    "einops",
    "warp-lang",
    "pillow==12.1.0",
    "starlette==0.52.1",
    # RL Framework dependencies
    "protobuf>=4.25.8,!=5.26.0",
    "hydra-core",
    "h5py",
    "tensorboard",
    "moviepy",
    "packaging<27",
    "skrl>=1.4.3",
    # Isaac Lab Tasks
    "scikit-learn",
    "numba",
    # Azure ML Integration
    "azure-identity>=1.13.0",
    "azure-ai-ml",
    "azureml-mlflow",
    "mlflow",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "azure-core==1.38.0",
    "azure-storage-blob>=12.5.0,<=12.19.0",
    "pyperclip==1.11.0",
    "rsl-rl-lib==4.0.0",
]

[project.optional-dependencies]
training = [
    "azure-identity>=1.13.0",
    "azure-ai-ml",
    "azureml-mlflow",
    "mlflow",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "rsl-rl-lib==4.0.0",
    "skrl>=1.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pytest>=8.4.2",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = []

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"src/inference/scripts/act_inference_node.py" = ["E402"]
"src/inference/scripts/play_policy.py" = ["E402"]
"src/training/scripts/rsl_rl/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["training", "common", "inference"]

[tool.ruff.format]
quote-style = "double"
