[project]
name = "ur10e-act-train"
version = "0.1.0"
description = "Standalone ACT training from rosbag data for UR10e"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "rosbags>=0.9",
    "safetensors>=0.4",
    "numpy<2",
    "Pillow>=9.0",
    "opencv-python-headless>=4.5",
    "pyyaml>=6.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
azure = [
    "azure-identity",
    "azure-storage-blob",
]
wandb = [
    "wandb>=0.16",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"
